--- a/package.json
+++ b/package.json
@@ -1,17 +1,23 @@
 {
   "name": "react-typescript-keystone-template",
   "version": "0.1.0",
+  "author": {
+    "email": "dominic.classen@coduct.com",
+    "name": "Dominic Claßen",
+    "url": "https://majesnix.dev"
+  },
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "@types/jest": "^24.0.0",
-    "@types/node": "^12.0.0",
-    "@types/react": "^16.9.0",
-    "@types/react-dom": "^16.9.0",
+    "ky": "^0.19.0",
+    "mobx": "^5.15.4",
+    "mobx-keystone": "^0.43.0",
+    "mobx-react-lite": "^2.0.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router": "^5.1.2",
     "react-scripts": "3.4.1",
     "typescript": "~3.7.2"
   },
@@ -35,5 +41,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/jest": "^24.0.0",
+    "@types/node": "^12.0.0",
+    "@types/react": "^16.9.0",
+    "@types/react-dom": "^16.9.0",
+    "@types/react-router": "^5.1.5",
+    "@types/react-router-dom": "^5.1.3"
   }
 }
