--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-typescript-keystone-template",
   "version": "0.1.0",
   "author": {
-    "email": "dominic.classen@coduct.com",
+    "email": "dominic@dominic-classen.de",
     "name": "Dominic Claßen",
     "url": "https://majesnix.dev"
   },
