--- a/package.json
+++ b/package.json
@@ -8,21 +8,26 @@
   },
   "private": true,
   "dependencies": {
-    "ky": "^0.30.0",
-    "mobx": "^6.6.0",
-    "mobx-keystone": "^0.69.0",
+    "ky": "^0.31.0",
+    "mobx": "^6.6.1",
+    "mobx-keystone": "^0.69.1",
     "mobx-react-lite": "^3.4.0",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-router": "^6.3.0",
     "react-scripts": "5.0.1",
-    "typescript": "~4.7.3"
+    "typescript": "~4.7.4"
   },
   "scripts": {
     "start": "react-scripts start",
+    "start:noBrowser": "BROWSER=none react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "e2e": "cypress open",
+    "e2e:run": "cypress run",
+    "e2e:run:chrome": "cypress run --browser chrome",
+    "e2e:ci": "start-server-and-test start:noBrowser http://localhost:3000 e2e:run:chrome"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -40,15 +45,22 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/cypress": "^8.0.3",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^14.2.0",
-    "@types/jest": "^28.1.1",
-    "@types/node": "^17.0.41",
-    "@types/react": "^18.0.12",
+    "@testing-library/user-event": "^14.2.1",
+    "@types/jest": "^28.1.4",
+    "@types/node": "^18.0.0",
+    "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
     "@types/react-router": "^5.1.18",
     "@types/react-router-dom": "^5.3.3",
-    "caniuse-lite": "^1.0.30001350"
+    "caniuse-lite": "^1.0.30001361",
+    "cross-env": "^7.0.3",
+    "cypress": "^10.3.0",
+    "start-server-and-test": "^1.14.0"
+  },
+  "resolutions": {
+    "open": "7.4.2"
   }
 }
