--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "e2e": "cypress open",
-    "e2e:run": "cypress run",
+    "cypress:open": "cypress open",
+    "e2e": "start-server-and-test start:noBrowser http://localhost:3000 cypress:open",
     "e2e:run:chrome": "cypress run --browser chrome",
     "e2e:ci": "start-server-and-test start:noBrowser http://localhost:3000 e2e:run:chrome"
   },
