ci: split workflows and test on dependabot automerge

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,43 +9,13 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  unit-test:
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [16.x, 18.x]
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v3
-        with:
-          node-version: ${{ matrix.node-version }}
-      - name: yarn install and test
-        run: |
-          yarn install --frozen-lockfile
-          yarn test
-  e2e-chrome:
-    name: e2e chrome
-    runs-on: ubuntu-latest
-    container:
-      image: cypress/browsers:node16.14.2-slim-chrome100-ff99-edge
-      options: --user 1001
-    steps:
-      - name: Checkout 🛎
-        uses: actions/checkout@v3
-
-      - name: Cypress tests 🧪
-        uses: cypress-io/github-action@v4
-        with:
-          command: yarn e2e:ci
+  test:
+    permissions:
+      contents: read
+    uses: ./.github/workflows/test.yml
 
   bump-version:
-    needs: [unit-test, e2e-chrome]
+    needs: [test]
     name: bump version
     runs-on: ubuntu-latest
     steps:
